--- a/polygon/polygonSelect.html
+++ b/polygon/polygonSelect.html
@@ -57,6 +57,9 @@
                     <li>
                         <a href="polygonAlgs.html#3_wStart">Triangle Search 1 (Wall Start)</a>
                     </li>
+                    <li>
+                        <a href="polygonAlgs.html#3_iStart">Triangle Search 1 (Interior Start Selection)</a>
+                    </li>
                 </ul>
                 <li><span class="tooltip" onclick="showAlgs('square');" onmouseover="showCat('square')">On a Square</span></li>
                 <ul id="alglist square" class="algs" style="display:none;">
@@ -65,6 +68,9 @@
                     </li>
                     <li>
                         <a href="polygonAlgs.html#4_wStart">Square Search 1 (Wall Start)</a>
+                    </li>
+                    <li>
+                        <a href="polygonAlgs.html#4_iStart">Square Search 1 (Interior Start Selection)</a>
                     </li>
                 </ul>
             </ul>
