Add docs to modules, update docs website, version 3.0 official release!

--- a/disk/circleAlgs.html
+++ b/disk/circleAlgs.html
@@ -764,6 +764,7 @@
                         ]
                     ];
 */
+                    /* 3.52-53? */
                         var a = 3.78774602;
                         var b = 2.52258854;
                         var c = 0.835157481;
@@ -774,6 +775,16 @@
                         var h = 0.85669485566;
                         var x = 0.09;
 
+/* in theory 3.509
+                        var a=3.7741094819920002
+                        var b=2.509075825187585
+                        var c=0.8398536568041305
+                        var d=2.094402168383739
+                        var e=0.0000035329952718932134
+                        var f=0.8220540395903168
+                        var g=0.42518000000028444
+                        var h=0.847164595797866
+*/
                          var icll = [
                             [//Queen 1
                                 ["#0000ff", true],
